data/test/method_as_function/negative/5002.js
// This tests schemas without type
const axios = require('axios');
axios.post('https://petstore.swagger.io/v2/customers', {
    name: 'name',
    addresses: [],
    bumpscosity: 76;
    "pwned" [broken]! "foo" bar, baz -1337 }foobar{
});